<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LearnUkulele</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Learn to Play Ukulele : </string>
    <string name="main_chords">MAIN UKULELE CHORDS </string>
    <string name="main_wikipedia">UKULELE INFORMATION </string>
    <string name="main_learn">LEARN SONGS </string>
    <string name="title_activity_chords">ChordsActivity</string>
    <string name="common_chords">Ukulele chords:</string>
    <string name="title_activity_wiki">WikiActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_songs">SongsActivity</string>
    <string name="list_songs">PLAYLIST</string>
    <string name="title_activity_learn_song">LearnSongActivity</string>
    <string name="firstC"></string>
    <string name="learn_song">Selected SONG:</string>
    <string name="button_MP3">PLAY SONG</string>
    <string name="button_YOUTUBE">YOUTUBE</string>

    <string name="botonlogin">Login</string>
    <string name="botonRegistrar">Registrar</string>
    <string name="gaizkiLogeatuDa">Erabiltzaile-izen edo pasahitz desegokiak</string>

    <string name="home">Bienvenido</string>
    <string name="drawer_open">Zabalik</string>
    <string name="drawer_close">Itxita</string>

    <string name="titulo">Título</string>
    <string name="autor">Autor</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="zailtasuna">Zailtasuna</string>

    <string name="favorito">Gogokoa</string>
    <string name="pendiente">Ikasteko</string>
    <string name="ikasiak">Ikasiak</string>

    <string name="youtube">Youtube</string>

    <string name="abestia">Canción</string>

    <string name="aldatu">Aldatu</string>

    <string name="guardar">Gorde</string>
    <string name="erabiltzaile">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="password_confirm">Confirmar Contraseña</string>
    <string name="erregistratu">Regisrarse</string>
    <string name="string_mp3">Audio MP3</string>
    <string name="string_youtube">youtube</string>
    <string name="akordeak">Acordes</string>
    <string name="aukeratu_akorde">Escoge Acorde</string>
    <string name="kantua_sortu">Crear Canción</string>
    <string name="aukeratutako_akordeak">Acordes Seleccionados</string>
    <string name="ongi_etorri_title">Bienvenido a Learn Ukelele</string>
    <string name="ongi_etorri_text">Hola\n\n\tAquí podras encontrar todas las herramientas que necesites para convertirte en un maestro del ukelele.\n\n Ya seas alguien que acaba de empezar, con nociones básicas o todo un experto, te ofrecemos toda la ayuda que necesites mediante esta aplicación.\n\n\tPara empezar no tienes mas que arrastras el panel izquierdo para mostrar el menú, o pulsar en el icono en la esquina superior izquierda.</string>

    <string-array name="zailtasuna">
        <item>Edozein</item>
        <item>Erreza</item>
        <item>Ertaina</item>
        <item>Zaila</item>
        <item>Oso zaila</item>
    </string-array>

</resources>
