<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LearnSongActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:id="@+id/textAbesti" />

    <EditText
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:id="@+id/abestiEditatu" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:id="@+id/textAutore"
        android:layout_weight="0.07" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoreEditatu" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.04">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_star_outline_24dp"
                android:id="@+id/imageFavritos" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.51">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imagePendienteak"
                android:src="@drawable/ic_query_builder_24dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="181dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="106dp"
                android:layout_height="match_parent"
                android:id="@+id/imageIkasiak"
                android:src="@drawable/ic_done_all_24dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youtube"
        android:id="@+id/textYoutube"
        android:layout_weight="0.07" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_weight="0.07"
        android:weightSum="1">


        <WebView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:id="@+id/imageYoutube" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/aldatu"
        android:id="@+id/buttonYoutube"
        android:layout_weight="0.07" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abestia"
        android:id="@+id/textMp3"
        android:layout_weight="0.07" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.70"
        android:weightSum="1">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/imageMp3"
            android:layout_weight="0.41" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/aldatu"
        android:id="@+id/buttonMp3"
        android:layout_weight="0.07" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/buttonEguneratu"
        android:layout_weight="0.07" />

</LinearLayout>

</ScrollView>
